# webhook-forwader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/webhook_forwarder/: config.py  main.py
